	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
11/26
	* Updated Rachel Field mob stats and drops [Playtester]
	* Updated selling price for some common drops [Playtester]
11/25
	* Fixed Sphinx Helm, Coif and Orc Hero Helm [Playtester]
	* Fixed selling price of Fine Grit 10z -> 60z [Playtester]
11/24
	* Heaven's drive no longer targets traps. [Skotlex]
11/23
	* Fixed sp cost of RG_RAID [Playtester]
	* Official skills for remaining Thanatos mobs [Playtester]
	- this completes the X.3 and X.4 mob skill updates
	- removed various skills from G_mobs
11/21
	* All coin related skills can be used with any weapon. Those that require
	  ammo can be used with any ammo. [Skotlex]
	* Fixed all cast times and delays of Gunslinger skills [Playtester]
	- cast time of Dust is reduced by dex
	- Tracking cast time cannot be reduced by anything
	- Increase Accuracy requires 4 coins instead of 2
	* Updated healing values of Ketupat and Red Thorn Fruit [Playtester]
11/20
	* Official skill for Ancient Mimic, Death Word and Angels [Playtester]
	- also made NPC_DEFENDER self targeted
	- Shelter now has angry mode
	* The max level of NPC_SPLASHATTACK is now 1. [Skotlex]
	* Flywing and Butterfly Wing will now use the teleport skill [Playtester]
	* Official skills for Breeze and Plasma [Playtester]
	* Official X.4 skills thanks to Tharis [Playtester]
	- also set MVP skills to MVP skill level
11/19
	* Official skills for Abyss Lake mobs [Playtester]
	- G_Acidus, G_Ferus and Green Iguana don't have skills
	- someone should test if all skills are working
	- Green Iguana is now a looter
11/18
	* Official skills for Bacsojin and Orc Baby [Playtester]